interval option in configuration file

--- a/doc/dyndns-client.conf
+++ b/doc/dyndns-client.conf
@@ -11,3 +11,7 @@ port = 12345
 # client domain name
 # domain =
 domain = domain.name.com
+#
+# update interval in seconds
+# interval = 
+interval = 30
