--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,9 @@
 all:
 	gcc -o server ddserv.c functions.c server.c config.c
 	gcc -o client client.c config.c
+client:
+	gcc -o client client.c config.c
+server:
+	gcc -o server ddserv.c functions.c server.c config.c
 clean:
 	rm -f client server
