new configuration options: username and password

--- a/doc/dyndns-client.conf
+++ b/doc/dyndns-client.conf
@@ -8,6 +8,12 @@ server = localhost
 # port =
 port = 12345
 #
+# Authentication data
+# login =
+# pass = 
+login = dynclient
+pass = dynpasswd
+#
 # client domain name
 # domain =
 domain = domain.name.com
