options for mysql connection

--- a/dDNS-ng/doc/dyndns-server.conf
+++ b/dDNS-ng/doc/dyndns-server.conf
@@ -15,3 +15,10 @@ log =
 # PID file location
 #
 pid = /var/run/ddns-server.pid
+#
+# MySQL connection
+#
+db_host = localhost
+db_name = database
+db_login = user
+db_pass = password
