fixed sql connection issue

--- a/dDNS-ng/doc/dyndns-server.conf
+++ b/dDNS-ng/doc/dyndns-server.conf
@@ -20,5 +20,5 @@ pid = /var/run/ddns-server.pid
 #
 db_host = localhost
 db_name = database
-db_login = user
-db_pass = password
+db_user = user
+db_secret = password
