New feature: email notifications

--- a/dDNS-ng/doc/dyndns-server.conf
+++ b/dDNS-ng/doc/dyndns-server.conf
@@ -22,3 +22,9 @@ db_host = localhost
 db_name = database
 db_user = user
 db_secret = password
+#
+# SMTP config
+#
+smtp_ip = 127.0.0.1
+smtp_port = 25
+mail_from = dyndns@example.com
