--- a/dDNS-ng/www/inc/config.php.sample
+++ b/dDNS-ng/www/inc/config.php.sample
@@ -4,4 +4,5 @@
 	define('PASS', 'password');
 	define('DB_HOST', 'localhost');
 	define('SMARTY_LIB', 'Smarty.class.php');
+	define('ADM_EMAIL', 'admin@example.com');
 ?>
