changed config option

--- a/dDNS-ng/doc/dyndns-client.conf
+++ b/dDNS-ng/doc/dyndns-client.conf
@@ -6,7 +6,7 @@ server = localhost
 #
 # dynamic DNS server TCP port number
 # port =
-port = 12345
+srv_port = 12345
 #
 # Authentication data
 # login =
